<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FilesToSend"
    style="@style/gradient_background"
    android:visibility="visible">
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/add_part_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/transparent"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            style="@style/textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_id"
            android:text=""
            android:layout_alignParentTop="true"


            android:visibility="gone"/>
        <Button
            style="@style/Button"
            android:id="@+id/selected_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_contact_button"
            android:onClick="chooseContact"
            android:layout_below="@+id/contact_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp" />
        <TextView
            style="@style/textview"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filename_id"
            android:text=""
            android:layout_below="@+id/selected_contact"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp" />
        <Button
            style="@style/Button"
            android:id="@+id/selected_file"
            android:onClick="chooseFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_file_button"
            android:layout_below="@+id/filename_id"
            android:layout_marginTop="16dp"
            android:layout_alignStart="@+id/selected_contact"
            android:layout_alignEnd="@+id/selected_contact" />

        <ImageButton
            android:id="@+id/ok_choose_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_accept"
            android:onClick="confirmChoice"
            android:contentDescription="@string/ok"
            android:layout_below="@+id/selected_file"
            android:layout_alignEnd="@+id/selected_file" />
        <ImageButton
            android:id="@+id/decline_choose_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_decline"
            android:onClick="declineChoice"
            android:contentDescription="@string/decline"
            android:layout_below="@+id/selected_file"
            android:layout_alignStart="@+id/selected_file"
            android:visibility="visible" />

    </RelativeLayout>

    <ImageButton

        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/add_button"
        android:gravity="center"

        android:background="@drawable/ic_add"
        android:contentDescription="@string/add"
        android:onClick="showAddPart"

         />
    <android.support.v7.widget.RecyclerView
        android:background="#00FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv"
        xmlns:android="http://schemas.android.com/apk/res/android" />


</LinearLayout>

